switch SingleThreadExecutor to VirtualThreadPerTaskExecutor